--- a/django/projeto_crud/crud_app/templates/home.html
+++ b/django/projeto_crud/crud_app/templates/home.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-dark mb-5" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-dark mb-2" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="{% static 'img/icone.png' %}" style="margin: -10px 0px">
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/crud_app/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cadastrar</a>
+                        <a class="nav-link" href="/crud_app/cadastro">Cadastrar</a>
                     </li>
 
                 </ul>
