--- a/django/projeto_crud/crud_app/templates/home.html
+++ b/django/projeto_crud/crud_app/templates/home.html
@@ -56,7 +56,11 @@
                 <b>ID: </b>{{ pessoa.id_pessoa}} |
                 <b>Nome: </b>{{ pessoa.nome}}    |
                 <b>Email: </b>{{ pessoa.email}}  |
-                <b>CPF: </b>{{ pessoa.cpf}}
+                <b>CPF: </b>{{ pessoa.cpf}}      |
+                <a href="{% url 'alterar_pessoa' pessoa.id_pessoa %}"> Alterar </a>      |
+                <a href="{% url 'deletar_pessoa' pessoa.id_pessoa %}"> Excluir </a>      |
+               
+
             </li>
             <hr>
             {% empty %}
