--- a/django/projeto_crud/crud_app/templates/alterar.html
+++ b/django/projeto_crud/crud_app/templates/alterar.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastrar</title>
+    <title>Alterar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
@@ -45,11 +45,11 @@
 
     <!-- FIM DO NAVBAR -->
 
-    <h3>Cadastrar nova Pessoa</h3>
+    <h3>Alterar Dados da Pessoa</h3>
 
     <!-- CONTAINER  - CONTEUDO DA PAGINA-->
     <div class="container">
-        <form action="{% url 'cadastro_pessoa' %}" method="POST">
+        <form action="{% url 'alterar_pessoa' pessoa.id_pessoa %}" method="POST">
             {% csrf_token %}
             <!-- criar campos do formulario ( row ) -->
             <div class="row">
@@ -57,7 +57,7 @@
                 <div class="col-12 col-md-6 col-lg-8">
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-default">Nome completo</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" name="nome" required
+                        <input type="text" class="form-control" aria-label="Sizing example input" name="nome" value="{{pessoa.nome}}" required
                             aria-describedby="inputGroup-sizing-default">
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
-                            <input type="text" class="form-control" aria-label="Sizing example input" name="email" required
+                            <input type="text" class="form-control" aria-label="Sizing example input" name="email" value="{{pessoa.email}}" required
                                 aria-describedby="inputGroup-sizing-default">
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default">CPF</span>
-                            <input type="text" class="form-control" aria-label="Sizing example input" name="cpf" required
+                            <input type="text" class="form-control" aria-label="Sizing example input" name="cpf" value="{{pessoa.cpf}}" required
                                 aria-describedby="inputGroup-sizing-default">
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                 <!-- ROW PARA BOTÃO -->
                 <div class="row">
                     <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                        <button type="submit" class="btn btn-primary">Cadastrar</button>
+                        <button type="submit" class="btn btn-primary">Alterar</button>
                     </div>
                 </div>
 
