--- a/django/projeto_crud/crud_app/templates/cadastrar.html
+++ b/django/projeto_crud/crud_app/templates/cadastrar.html
@@ -1,103 +1,54 @@
+{% extends 'base.html' %}
+{% block title %} CRUD_Cadastro {% endblock %}
+{% block content %}
 {% load static %}
 
-<!doctype html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastrar</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
-
-<body>
-
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-dark mb-2" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'img/icone.png' %}" style="margin: -10px 0px">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/crud_app/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Cadastrar</a>
-                    </li>
-
-                </ul>
-                <form class="d-flex" role="pesquisar">
-                    <input class="form-control me-2" type="pesquisar" placeholder="pesquisar" aria-label="pesquisar" />
-                    <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                </form>
-
-            </div>
-        </div>
-    </nav>
-
-    <!-- FIM DO NAVBAR -->
-
+<!-- CONTAINER  - CONTEUDO DA PAGINA-->
+<div class="container">
     <h3>Cadastrar nova Pessoa</h3>
+    <form action="{% url 'cadastro_pessoa' %}" method="POST">
+        {% csrf_token %}
+        <!-- criar campos do formulario ( row ) -->
+        <div class="row">
+            <!-- parametros para dimencionar o tamanho dos campos na tela -->
+            <div class="col-12 col-md-6 col-lg-8">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Nome completo</span>
+                    <input type="text" class="form-control" aria-label="Sizing example input" name="nome" required
+                        aria-describedby="inputGroup-sizing-default">
+                </div>
+            </div>
 
-    <!-- CONTAINER  - CONTEUDO DA PAGINA-->
-    <div class="container">
-        <form action="{% url 'cadastro_pessoa' %}" method="POST">
-            {% csrf_token %}
-            <!-- criar campos do formulario ( row ) -->
             <div class="row">
-                <!-- parametros para dimencionar o tamanho dos campos na tela -->
-                <div class="col-12 col-md-6 col-lg-8">
+                <div class="col-12 col-md-12 col-lg-4">
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Nome completo</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" name="nome" required
+                        <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input" name="email" required
                             aria-describedby="inputGroup-sizing-default">
                     </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-12 col-md-12 col-lg-4">
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
-                            <input type="text" class="form-control" aria-label="Sizing example input" name="email" required
-                                aria-describedby="inputGroup-sizing-default">
-                        </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">CPF</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input" name="cpf" required
+                            aria-describedby="inputGroup-sizing-default">
                     </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="inputGroup-sizing-default">CPF</span>
-                            <input type="text" class="form-control" aria-label="Sizing example input" name="cpf" required
-                                aria-describedby="inputGroup-sizing-default">
-                        </div>
-                    </div>
+
+            <!-- ROW PARA BOTÃO -->
+            <div class="row">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                    <button type="submit" class="btn btn-primary">Cadastrar</button>
                 </div>
+            </div>
 
+    </form>
+</div>
 
-                <!-- ROW PARA BOTÃO -->
-                <div class="row">
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                        <button type="submit" class="btn btn-primary">Cadastrar</button>
-                    </div>
-                </div>
-
-        </form>
-    </div>
-
-    <!-- FIM DO CONTAINER -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+<!-- FIM DO CONTAINER -->
+{% endblock %}
