--- a/django/projeto_crud/crud_app/templates/header.html
+++ b/django/projeto_crud/crud_app/templates/header.html
@@ -17,6 +17,9 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'principal' %}">Principal</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'cadastro_pessoa' %}">Cadastrar</a>
                     </li>
 
