--- a/django/projeto_crud/crud_app/templates/home.html
+++ b/django/projeto_crud/crud_app/templates/home.html
@@ -1,31 +1,34 @@
 {% extends 'base.html' %}
-{% block title %} CRUD_Home {% endblock %}
+{% block title %}CRUD_Home{% endblock %}
 {% block content %}
 {% load static %}
-
-<!-- CONTAINER -->
-<div class="container">
-    <h1>Lista de Pessoas</h1>
-    <hr>
-
-    <!-- Lista -->
-    <ul>
+    <!-- container -->
+    <div class="container">
+        <h1>Lista de pessoas</h1>
+        <hr class="mb-3">
+        <!-- lista de pessoas -->
         {% for pessoa in pessoas %}
-        <li>
-            <b>ID: </b>{{ pessoa.id_pessoa}} |
-            <b>Nome: </b>{{ pessoa.nome}} |
-            <b>Email: </b>{{ pessoa.email}} |
-            <b>CPF: </b>{{ pessoa.cpf}} |
-            <a href="{% url 'alterar_pessoa' pessoa.id_pessoa %}"> Alterar </a> |
-            <a href="{% url 'deletar_pessoa' pessoa.id_pessoa %}"> Excluir </a> |
-
-        </li>
-       
+            <ul class="row lista-pessoas">
+                <li class="col-12 col-md-2 col-lg-1"><b>ID: </b>{{ pessoa.id_pessoa }}</li>
+                <li class="col-12 col-md-10 col-lg-3">{{ pessoa.nome }}</li>
+                <li class="col-12 col-md-8 col-lg-4">{{ pessoa.email }}</li>
+                <li class="col-12 col-md-4 col-lg-2"><b>CPF: </b>{{ pessoa.cpf }}</li>
+                <li class="col-6 col-md-6 col-lg-1">
+                    <a href="{% url 'alterar_pessoa' pessoa.id_pessoa %}">
+                        <img src="{% static 'img/editar.png' %}" alt="Editar" title="Editar" style="width: 18px;">
+                    </a>
+                </li>
+                <li class="col-6 col-md-6 col-lg-1">
+                    <a href="{% url 'deletar_pessoa' pessoa.id_pessoa %}">
+                        <img src="{% static 'img/deletar.png' %}" alt="Deletar" title="Deletar" style="width: 18px;">
+                    </a>
+                </li>
+            </ul>
         {% empty %}
-        <li> Nehuma Pessoa Cadastrada no Banco!!! </li>
+            <ul>
+                <li>Nenhuma pessoa cadastrada</li>
+            </ul>
         {% endfor %}
-
-    </ul>
-</div>
-<!-- FIM DO CONTAINER -->
+    </div>
+    <!-- fim do container -->
 {% endblock %}
